assets/css/style.css
@import "./reset.css";

:root {
    --main-background-color: #d8dfe8;
    --main-color-1: #0a3871;
    --main-color-2: #b3b3b3;
    --secondary-color-1: #495057;
    --secondary-color-2: #f3f5fc;
}

body {
    background-color: var(--main-background-color);
}

main{
    display: flex;
    flex-direction: row;

    padding: 1.5rem;
}

.input {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    width: 75vw;
    height: 100vh;

    padding: 1rem;
}

.input .logo {
    width: 60px;
    height: 24px;
}

.input .input__box {
    width: 100%;
    height: 62.5%;

    padding: .75rem;

    background-color: transparent;

    color: var(--main-color-1);
    font-size: 2rem;
    font-weight: 400;
}

.input .input__rules {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: .375rem;
}

.input .input__rules img {
    width: .75rem;
    height: .75rem;
}

.input .input__rules span {
    color: var(--secondary-color-1);
    font-size: .75rem;
    font-weight: 400;
}

.input .input__buttons {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}

.input .input__buttons button {
    width: 12.5rem;

    padding: 1.5rem;

    border: 1px solid var(--main-color-1);
    border-radius: 1.5rem;

    font-size: 1rem;
    font-weight: 400;

    cursor: pointer;
}

.input .input__buttons button.encode {
    background-color: var(--main-color-1);

    color: var(--secondary-color-2);
}

.input .input__buttons button.decode {
    background-color: var(--secondary-color-2);

    color: var(--main-color-1);
}

.output {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    width: 25vw;
    height: 100vh;

    padding: 1rem;
    border-radius: 1.5rem;

    background-color: var(--secondary-color-2);
}

.output div {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;

    height: 100%;
}

.output .output__empty {
    justify-content: center;
}

.output .output__empty img {
    width: 75%;
}

.output .output__empty span {
    color: var(--main-color-1);
    text-align: center;
}

.output .output__empty .title {
    font-size: 1.5rem;
    font-weight: 700;
}

.output .output__empty .subtitle {
    font-size: 1rem;
    font-weight: 400;
}

.output .output__filled {
    display: none;

    justify-content: space-between;
}

.output .output__filled .output__filled__box {
    height: 62.5%;

    padding: 1rem;
    
    color: var(--secondary-color-1);
    font-size: 1rem;
    font-weight: 400;
}

.output .output__filled button.copy {
    width: 7.5rem;

    padding: 1.5rem;
    border: 1px solid var(--main-color-1);
    border-radius: 1.5rem;

    background-color: transparent;

    font-size: 1rem;
    font-weight: 400;

    cursor: pointer;
}

